Added basic decisions to duel krosis. Events now also generate soldiers for krosis on war

--- a/localization/english/events/ek_sa_krosis_events_l_english.yml
+++ b/localization/english/events/ek_sa_krosis_events_l_english.yml
@@ -3,3 +3,12 @@
  ek_sa_krosis.0002.desc:0 "For thousands of years, an old nordic tomb sat upon the peaks of $c_shearpoint$. Long forgotten, only few adventurers ever visit it now days. One such traveler has returned from it in the recent days, and he claims he hears weird rumblings coming from the crumbling tomb."
  ek_sa_krosis.0002.a:0 "I wonder what this means..."
  ek_sa_krosis.0002.a.flavor:0 "Nothing has happend, for now"
+ ek_sa_krosis.0006.t:0 "Expedition to $c_shearpoint$"
+ ek_sa_krosis.0006.desc:0 "Our scouts have reported that a powerful draugr was seen floating near the ancient ruin on the top of the mountian. We should send one of our champions to fight it!"
+ ek_sa_krosis.0006.a:0 "I will do it myself!"
+ ek_sa_krosis.0006.b:0 "My marshal will see to it"
+ ek_sa_krosis.0006.c:0 "My best knight will be up to the task"
+ ek_sa_krosis.0006.d:0 "It seems to powerful for us..."
+ ek_sa_krosis.0008.t:0 "The death of Krosis"
+ ek_sa_krosis.0008.desc:0 "The menace on the top of $c_shearpoint$ was finally slain by [GetScope(attacker).GetNameTitle]."
+ ek_sa_krosis.0008.a:0 "Good Riddance!"
