--- a/localization/english/events/ek_sa_krosis_events_l_english.yml
+++ b/localization/english/events/ek_sa_krosis_events_l_english.yml
@@ -7,7 +7,7 @@
  ek_sa_krosis.0005.desc:0 "The menace on the top of $c_shearpoint$ was finally slain by [winner.GetFullName], while waging a full blown war against it."
  ek_sa_krosis.0005.a:0 "Good Riddance!"
  ek_sa_krosis.0006.t:0 "Expedition to $c_shearpoint$"
- ek_sa_krosis.0006.desc:0 "Our scouts have reported that a powerful draugr was seen floating near the ancient ruin on the top of the mountian. We should send one of our champions to fight it!"
+ ek_sa_krosis.0006.desc:0 "Our scouts have reported that a powerful draugr was seen floating near the ancient ruin on the top of the mountain. We should send one of our champions to fight it!"
  ek_sa_krosis.0006.a:0 "I will do it myself!"
  ek_sa_krosis.0006.b:0 "My marshal will see to it"
  ek_sa_krosis.0006.c:0 "My best knight will be up to the task"
