--- a/localization/english/decisions/ek_sa_decisions_l_english.yml
+++ b/localization/english/decisions/ek_sa_decisions_l_english.yml
@@ -15,3 +15,7 @@
  ek_sa_expedition_nahkriin_decision_tooltip:0 "Fund an expedition to $holy_site_hs_skuldafn_name$"
  ek_sa_expedition_nahkriin_decision_desc:0 "Words of strange rumblings in $holy_site_hs_skuldafn_name$ are spreading through the realm. The people are afraid, as the rumors hint at an ancient lich residing there. We must fund an expedition to figure out what is going up there."
  ek_sa_expedition_nahkriin_decision_confirm:0 "Let's see what is going on up there"
+ ek_sa_expedition_vokun_decision:0 "Fund an expedition to $c_high_gate$"
+ ek_sa_expedition_vokun_decision_tooltip:0 "Fund an expedition to $c_high_gate$"
+ ek_sa_expedition_vokun_decision_desc:0 "Words of strange rumblings in $c_high_gate$ are spreading through the realm. The people are afraid, as the rumors hint at an ancient lich residing there. We must fund an expedition to figure out what is going on there."
+ ek_sa_expedition_vokun_decision_confirm:0 "Let's see what is going on in there"
